syntax = "proto3";

package role;

import "google/protobuf/wrappers.proto";

message FindAllRoleRequest {
  int32 page = 1;
  int32 page_size = 2;
  string search = 3;
}

message FindByIdRoleRequest { int32 role_id = 1; }

message FindByIdUserRoleRequest { int32 user_id = 1; }

message RoleResponse {
  int32 id = 1;
  string name = 2;
  string created_at = 3;
  string updated_at = 4;
}

message RoleResponseDeleteAt {
  int32 id = 1;
  string name = 2;
  string created_at = 3;
  string updated_at = 4;
  google.protobuf.StringValue deleted_at = 5;
}

message ApiResponseRole {
  string status = 1;
  string message = 2;
  RoleResponse data = 3;
}

message ApiResponseRoleDeleteAt {
  string status = 1;
  string message = 2;
  RoleResponseDeleteAt data = 3;
}

message ApiResponsesRole {
  string status = 1;
  string message = 2;
  repeated RoleResponse data = 3;
}